force-app/main/default/objects/Reference_Person__c/Reference_Person__c.object-meta.xml
<CustomObject>
    <label>Reference Person</label>
    <nameField>
        <displayFormat>RPID-{0000}</displayFormat>
        <label>Reference Person ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>