force-app/main/default/objects/Reference_Person__c/fields/Referee_Company__c.field-meta.xml
<CustomField>
    <fullName>Referee_Company__c</fullName>
    <label>Referee Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>