force-app/main/default/objects/Reference_Person__c/fields/Referee_Email__c.field-meta.xml
<CustomField>
    <fullName>Referee_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Referee Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>