force-app/main/default/objects/Reference_Person__c/fields/Referee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Referee_Full_Name__c</fullName>
    <label>Referee Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>