force-app/main/default/objects/Reference_Person__c/fields/Referee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referee_Phone__c</fullName>
    <label>Referee Phone</label>
    <type>Phone</type>
</CustomField>