force-app/main/default/objects/Reference_Person__c/fields/Token_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry_Date__c</fullName>
    <label>Token Expiry Date</label>
    <type>DateTime</type>
</CustomField>