force-app/main/default/objects/Reference_Person__c/fields/Verification_Token__c.field-meta.xml
<CustomField>
    <fullName>Verification_Token__c</fullName>
    <externalId>true</externalId>
    <label>Verification Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>