force-app/main/default/objects/Reference_Person__c/fields/Your_Email__c.field-meta.xml
<CustomField>
    <fullName>Your_Email__c</fullName>
    <label>Your Email</label>
    <type>Email</type>
</CustomField>